--- a/MySoap/MySoap.Android/MySoapDB.Android.csproj
+++ b/MySoap/MySoap.Android/MySoapDB.Android.csproj
@@ -7,8 +7,8 @@
     <ProjectTypeGuids>{EFBA0AD7-5A72-4C68-AF49-83D382785DCF};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <TemplateGuid>{c9e5eea5-ca05-42a1-839b-61506e0a37df}</TemplateGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>MySoap.Droid</RootNamespace>
-    <AssemblyName>MySoap.Android</AssemblyName>
+    <RootNamespace>MySoapDB.Droid</RootNamespace>
+    <AssemblyName>MySoapDB.Android</AssemblyName>
     <Deterministic>True</Deterministic>
     <AndroidApplication>True</AndroidApplication>
     <AndroidResgenFile>Resources\Resource.designer.cs</AndroidResgenFile>
@@ -33,6 +33,10 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AndroidLinkMode>None</AndroidLinkMode>
+    <AotAssemblies>false</AotAssemblies>
+    <EnableLLVM>false</EnableLLVM>
+    <AndroidEnableProfiledAot>false</AndroidEnableProfiledAot>
+    <BundleAssemblies>false</BundleAssemblies>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -87,9 +91,9 @@
     <Folder Include="Resources\drawable\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MySoap\MySoap.csproj">
-      <Project>{03F1E891-5062-4FE7-99ED-29B0B03947D1}</Project>
-      <Name>MySoap</Name>
+    <ProjectReference Include="..\MySoap\MySoapDB.csproj">
+      <Project>{AF1A2C7F-376F-430D-80F4-F7FC5A506ED0}</Project>
+      <Name>MySoapDB</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
